[tool.poetry]
name = "dick-remover"
version = "0.1.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
environs = "^14.3.0"
aiogram = "^3.22.0"
aiorun = "^2025.1.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.18.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
